Bug 91128 - LibO crashes when clicking on Navigator in Impress/Draw
Summary: LibO crashes when clicking on Navigator in Impress/Draw
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.0.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.0.0
Keywords: bibisected, bisected, regression
: 91152 (view as bug list)
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2015-05-07 11:40 UTC by Yousuf Philips (jay) (retired)
Modified: 2015-12-17 09:03 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
linux backtrace (28.03 KB, text/plain)
2015-05-07 11:40 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2015-05-07 11:40:22 UTC
Created attachment 115404 [details]
linux backtrace

Steps:
1) Open Impress or Draw
2) Click on the Navigator icon in the sidebar
3) Crash

I'm assuming its related to all the recent crashing thats been going on this last week.

Version: 5.0.0.0.alpha1+
Build ID: 6e78bf76f3a10b43475e1bd801bdcbb9ce62f668
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2015-05-07_00:08:39
Comment 1 raal 2015-05-07 19:44:21 UTC
Reproducible with Version: 5.0.0.0.alpha1+
Build ID: 5984cc83fe756f7483d1ac582b8adbef5042be8b
TinderBox: Win-x86@42, Branch:master, Time: 2015-05-07_05:11:59
Comment 2 Matthew Francis 2015-05-08 03:36:39 UTC
Confirmed that this is another vclptr issue (commit e8b97a52c96df9c8e8055407b1e40ed7cb9cfc67)
Comment 3 Michael Meeks 2015-05-08 10:06:01 UTC
Fixed locally; will push shortly.
Comment 4 Commit Notification 2015-05-08 10:15:21 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1394e45450e58d23223ac3bea264a15e0b2b9078

tdf#91128 - Dockwin post-dispose crash fix.

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Michael Meeks 2015-05-08 10:35:51 UTC
*** Bug 91152 has been marked as a duplicate of this bug. ***
Comment 6 Robinson Tryon (qubit) 2015-12-17 09:03:58 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]