tdf#91128 - Dockwin post-dispose crash fix.

Change-Id: I46252c272d45209f8cb3fd072df4109440d3fcae